@@ -1,3 +1,7 @@
+2020-05-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCicode.c: Fix bug #2827
+
 2020-05-18 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCBBlock.c,
